fix: cellSpacing and cellPadding set to 0

--- a/styles/Table.module.css
+++ b/styles/Table.module.css
@@ -5,12 +5,17 @@
     justify-content: center;
     position: static;
     width:100%;
+    border-spacing: 0;
 }
 
 .mainRow {
-    
+
 }
 
 .subRow {
     background-color: white;
+}
+
+.text {
+    padding: 10px;
 }
